Correccion de tablas para IFI Digital

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_2.cshtml
@@ -66,63 +66,64 @@
 <h5><strong>Sobre la subsanación voluntaria</strong></h5>
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
-        <span>
-            En tal sentido, teniendo en consideración que las condiciones y forma en cómo se procederá a realizar la subsanación voluntaria ya se encuentra establecida en el RISMFFS, resulta pertinente aplicar los criterios señalados en dicho Reglamento teniéndose en cuenta los siguientes requisitos:<br />
-            <div style="text-align: center; margin-bottom: 0;">
-                <strong>
-                    Cuadro N° XX: Evaluación de los presupuestos para la configuración de la subsanación voluntaria
-                </strong>
-            </div>
-            <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
-                <thead>
-                    <tr style="background-color: #bfbfbf;">
-                        <th style="text-align: center; border: 1px solid #000;" colspan="2">Condiciones para la configuración de la subsanación voluntaria</th>
-                        <th style="text-align: center; border: 1px solid #000;">Evaluación</th>
-                        <th style="text-align: center; border: 1px solid #000;">Cumple con el requisito (SI/NO)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td style="border: 1px solid #000; background-color: #bfbfbf; text-align: center;" rowspan="2">
-                            Presupuestos básicos
-                        </td>
-                        <td style="border: 1px solid #000;">
-                            (ii) Realizar la presentación dentro del plazo previsto para la presentación de los descargos en la fase instructora.
-                        </td>
-                        <td style="border: 1px solid #000;">
-                            En el presente caso, se advierte que el/la concesionario/a presentó ante el (indicar entidad e informe de ejecución objeto de imputación, así como el periodo correspondiente y fecha de presentación); es decir, dentro del plazo previsto para la presentación de los descargos (esto es hasta el XX de XXXX de XXXX).
-                        </td>
-                        <td style="border: 1px solid #000; text-align: center;">SI</td>
-                    </tr>
-                    <tr>
-                        <td style="border: 1px solid #000;">
-                            (i) No ser sujeto infractor reincidente.
-                        </td>
-                        <td style="border: 1px solid #000;">
-                            Según el Reporte de Antecedentes, de fecha XX de XXXX de XXXX, se aprecia que el/la concesionario/a no registra sanción y/o multa impuesta por la Dirección de Fiscalización Forestal y de Fauna Silvestre, por lo que, se tiene por cumplido el requisito analizado.
-                        </td>
-                        <td style="border: 1px solid #000; text-align: center;">SI</td>
-                    </tr>
-                    <tr>
-                        <td style="border: 1px solid #000; background-color: #bfbfbf; text-align: center;" rowspan="2">
-                            Presupuesto específico
-                        </td>
-                        <td style="border: 1px solid #000;">
-                            (i) Entregar la información o documentación.
-                        </td>
-                        <td style="border: 1px solid #000;">
-                            De la revisión del Escrito/Carta de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaEmisionTexto || 'XX de XXX del 202X'} ingresado al OSINFOR con Registro N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || 'XXXX'}, se advierte que el/la concesionario/a presentó ante el (indicar entidad e informe de ejecución objeto de imputación, así como el periodo correspondiente y fecha de presentación), por lo que, se tiene por cumplido el requisito analizado.
-                        </td>
-                        <td style="border: 1px solid #000; text-align: center;">SI</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div style="font-size: 9pt; margin-top: 0; text-align: center;">
-                <strong>Fuente:</strong> Elaboración propia en base a lo regulado por el artículo 6 del RISMFFS
-            </div>
-        </span>
+        En tal sentido, teniendo en consideración que las condiciones y forma en cómo se procederá a realizar la subsanación voluntaria ya se encuentra establecida en el RISMFFS, resulta pertinente aplicar los criterios señalados en dicho Reglamento teniéndose en cuenta los siguientes requisitos:
     </li>
 </ol>
+<br />
+
+<div style="text-align: center; margin-bottom: 0;">
+    <strong>
+        Cuadro N° XX: Evaluación de los presupuestos para la configuración de la subsanación voluntaria
+    </strong>
+</div>
+<table cellpadding="4" border="0" style="font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%; margin-bottom: 0;">
+    <thead>
+        <tr style="background-color: #bfbfbf;">
+            <th style="text-align: center; border: 1px solid #000;" colspan="2">Condiciones para la configuración de la subsanación voluntaria</th>
+            <th style="text-align: center; border: 1px solid #000;">Evaluación</th>
+            <th style="text-align: center; border: 1px solid #000;">Cumple con el requisito (SI/NO)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #000; background-color: #bfbfbf; text-align: center;" rowspan="2">
+                Presupuestos básicos
+            </td>
+            <td style="border: 1px solid #000;">
+                (ii) Realizar la presentación dentro del plazo previsto para la presentación de los descargos en la fase instructora.
+            </td>
+            <td style="border: 1px solid #000;">
+                En el presente caso, se advierte que el/la concesionario/a presentó ante el (indicar entidad e informe de ejecución objeto de imputación, así como el periodo correspondiente y fecha de presentación); es decir, dentro del plazo previsto para la presentación de los descargos (esto es hasta el XX de XXXX de XXXX).
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">SI</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #000;">
+                (i) No ser sujeto infractor reincidente.
+            </td>
+            <td style="border: 1px solid #000;">
+                Según el Reporte de Antecedentes, de fecha XX de XXXX de XXXX, se aprecia que el/la concesionario/a no registra sanción y/o multa impuesta por la Dirección de Fiscalización Forestal y de Fauna Silvestre, por lo que, se tiene por cumplido el requisito analizado.
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">SI</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid #000; background-color: #bfbfbf; text-align: center;" rowspan="2">
+                Presupuesto específico
+            </td>
+            <td style="border: 1px solid #000;">
+                (i) Entregar la información o documentación.
+            </td>
+            <td style="border: 1px solid #000;">
+                De la revisión del Escrito/Carta de fecha ${informe.ANTECEDENTES_DOCS.Escrito.fechaEmisionTexto || 'XX de XXX del 202X'} ingresado al OSINFOR con Registro N° ${informe.ANTECEDENTES_DOCS.Escrito.numero || 'XXXX'}, se advierte que el/la concesionario/a presentó ante el (indicar entidad e informe de ejecución objeto de imputación, así como el periodo correspondiente y fecha de presentación), por lo que, se tiene por cumplido el requisito analizado.
+            </td>
+            <td style="border: 1px solid #000; text-align: center;">SI</td>
+        </tr>
+    </tbody>
+</table>
+<div style="font-size: 9pt; margin-top: 0; text-align: center;">
+    <strong>Fuente:</strong> Elaboración propia en base a lo regulado por el artículo 6 del RISMFFS
+</div>
+
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         En atención a lo señalado precedentemente, se advierte que la conducta <strong>del/la concesionario/a</strong> cumple con los requisitos para la aplicación de la figura de subsanación voluntaria respecto de la infracción materia de análisis.
