Cambios Informe fundamentado - oficios

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/AddEdit.cshtml
@@ -57,8 +57,8 @@
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#navEstado" role="tab" aria-controls="home" aria-selected="true">Estado Situacional</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navDatos" role="tab" aria-controls="home" aria-selected="true">Datos Solicitud FEMAS</a></li>
-                            <li class="nav-item" id="idNavInformeFundamentado"><a class="nav-link" data-toggle="tab" href="#navEntidades" role="tab" aria-controls="home" aria-selected="true">Informe Fundamentado</a></li>
-                            <li id="idNavPauCopia" class="nav-item"><a class="nav-link" data-toggle="tab" href="#navConclusion" role="tab" aria-controls="home" aria-selected="true">PAU/Copia</a></li>
+                            <li class="nav-item" id="idNavInformeFundamentado"><a class="nav-link" data-toggle="tab" href="#navEntidades" role="tab" aria-controls="home" aria-selected="true">Informe de Supervisión</a></li>
+                            <li id="idNavPauCopia" class="nav-item"><a class="nav-link" data-toggle="tab" href="#navConclusion" role="tab" aria-controls="home" aria-selected="true">Información PAU/Copia</a></li>
                             <li id="idNavObservaciones" class="nav-item"><a class="nav-link" data-toggle="tab" href="#navObservacion" role="tab" aria-controls="home" aria-selected="true">Notificación</a></li>
                         </ul>
                         <div class="tab-content">
