validaciones de fecha

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/AddEdit.cshtml
@@ -76,15 +76,15 @@
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-4">
-                                        <label for="txtRegistro" class="text-small obligatorio">Registro</label>
+                                        <label for="txtRegistro" class="text-small obligatorio">Número de Registro del SITD</label>
                                         @Html.TextBoxFor(m => m.txtRegistro, new { @class = "form-control form-control-sm" })
                                     </div>
                                     <div class="form-group col-md-4">
-                                        <label for="dtpFechaIngresoSolicitud" class="text-small obligatorio">Fecha de Ingreso de la Solicitud</label>
+                                        <label for="dtpFechaIngresoSolicitud" class="text-small obligatorio">Fecha de Ingreso de la Solicitud del SITD</label>
                                         @Html.EditorFor(m => m.dtpFechaIngresoSolicitud, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
                                     </div>
                                     <div class="form-group col-md-4">
-                                        <label for="txtNumeroOficioSolicitud" class="text-small obligatorio">N° de oficio(Solicitud)</label>
+                                        <label for="txtNumeroOficioSolicitud" class="text-small obligatorio">N° de oficio (Solicitud)</label>
                                         @Html.TextBoxFor(m => m.txtNumeroOficioSolicitud, new { @class = "form-control form-control-sm" })
                                     </div>
                                 </div>
