modificacion de check box

--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/Shared/_renderListInforme.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/Shared/_renderListInforme.cshtml
@@ -190,7 +190,7 @@
                     <th colspan="6" class="text-sm-left">
                         <div class="form-inline">
                             <i class="fa mx-2 fa-lg fa-solid fa-plus" style="cursor:pointer;" onclick="_renderListExpediente.fnViewModalConsulta();" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
-                            <strong>Informe SIGO</strong>
+                            <strong>Informe Supervisión</strong>
                         </div>
                     </th>
                 </tr>
