--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/AddEdit.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeFundamentado/AddEdit.cshtml
@@ -57,7 +57,7 @@
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#navEstado" role="tab" aria-controls="home" aria-selected="true">Estado Situacional</a></li>
                             <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#navDatos" role="tab" aria-controls="home" aria-selected="true">Datos Solicitud FEMAS</a></li>
-                            <li class="nav-item" id="idNavInformeFundamentado"><a class="nav-link" data-toggle="tab" href="#navEntidades" role="tab" aria-controls="home" aria-selected="true">Informe de Supervisión</a></li>
+                            <li class="nav-item" id="idNavInformeFundamentado"><a class="nav-link" data-toggle="tab" href="#navEntidades" role="tab" aria-controls="home" aria-selected="true">Informe Fundamentado</a></li>
                             <li id="idNavPauCopia" class="nav-item"><a class="nav-link" data-toggle="tab" href="#navConclusion" role="tab" aria-controls="home" aria-selected="true">Información PAU/Copia</a></li>
                             <li id="idNavObservaciones" class="nav-item"><a class="nav-link" data-toggle="tab" href="#navObservacion" role="tab" aria-controls="home" aria-selected="true">Notificación</a></li>
                         </ul>
@@ -169,11 +169,11 @@
                                     <div class="card">
                                         <div class="card-header" id="headingOne">
                                             <a href="#" class="card-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                Informe Fundamentado
+                                                Emitir Informe Fundamentado
                                             </a>
                                         </div>
 
-                                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                        <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                                             <div class="card-body">
                                                 <div class="form-row">
                                                     <div class="form-group col-md-4">
@@ -186,7 +186,7 @@
                                                     <div class="form-group col-md-4">
                                                         <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                             <label for="dtpfechaFirmezaPAU" class="text-small obligatorio">  Fecha de Firmeza del PAU</label>
-                                                            @Html.EditorFor(m => m.dtpfechaFirmezaPAU, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
+                                                            @Html.EditorFor(m => m.dtpfechaFirmezaPAU, new { htmlAttributes = new { @class = "form-control form-control-sm activarInforme", placeholder = "dd/mm/yyyy" } })
                                                         </div>
                                                     </div>
                                                     <div class="form-group col-md-4">
@@ -199,13 +199,13 @@
                                                     <div class="form-group col-md-4">
                                                         <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                             <label for="txtNumeroInformeFundamentado" class="text-small obligatorio">Número de Informe Fundamentado</label>
-                                                            @Html.EditorFor(m => m.txtNumeroInformeFundamentado, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                                            @Html.EditorFor(m => m.txtNumeroInformeFundamentado, new { htmlAttributes = new { @class = "form-control form-control-sm activarInforme" } })
                                                         </div>
                                                     </div>
                                                     <div class="form-group col-md-4">
                                                         <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                             <label for="dtpFechaFundamentado" class="text-small obligatorio">Fecha de Emisión de Informe</label>
-                                                            @Html.EditorFor(m => m.dtpFechaFundamentado, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
+                                                            @Html.EditorFor(m => m.dtpFechaFundamentado, new { htmlAttributes = new { @class = "form-control form-control-sm activarInforme", placeholder = "dd/mm/yyyy" } })
                                                         </div>
                                                     </div>
                                                 </div>
@@ -216,26 +216,26 @@
                                                     <div class="form-group col-md-4">
                                                         <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                             <label for="txtNumeroOficio1" class="text-small obligatorio">  N° de Oficio</label>
-                                                            @Html.EditorFor(m => m.txtNumeroOficio1, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                                            @Html.EditorFor(m => m.txtNumeroOficio1, new { htmlAttributes = new { @class = "form-control form-control-sm activarInforme" } })
                                                         </div>
                                                     </div>
                                                     <div class="form-group col-md-4">
                                                         <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                             <label for="dtpFechaEmisionPau" class="text-small obligatorio">Fecha de Emisión de Oficio</label>
-                                                            @Html.EditorFor(m => m.dtpfechaOficio1, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
+                                                            @Html.EditorFor(m => m.dtpfechaOficio1, new { htmlAttributes = new { @class = "form-control form-control-sm activarInforme", placeholder = "dd/mm/yyyy" } })
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="form-row">
                                                     <div class="form-group col-md-12">
                                                         <label for="txtConclusiones" class="text-small">Conclusiones</label>
-                                                        @Html.TextAreaFor(m => m.txtConclusiones, 3, 1, new { @class = "form-control form-control-sm" })
+                                                        @Html.TextAreaFor(m => m.txtConclusiones, 3, 1, new { @class = "form-control form-control-sm activarInforme" })
                                                     </div>
                                                 </div>
                                                 <div class="form-row">
                                                     <div class="form-group col-md-12">
                                                         <label for="txtObservaciones" class="text-small">Observaciones</label>
-                                                        @Html.TextAreaFor(m => m.txtObservaciones, 3, 1, new { @class = "form-control form-control-sm" })
+                                                        @Html.TextAreaFor(m => m.txtObservaciones, 3, 1, new { @class = "form-control form-control-sm activarInforme" })
                                                     </div>
                                                 </div>
                                                 <div class="form-row">
@@ -244,7 +244,7 @@
                                                             <thead>
                                                                 <tr>
                                                                     <th colspan="17" class="text-sm-left">
-                                                                        <div class="form-inline">
+                                                                        <div class="form-inline ">
                                                                             <i class="fa mx-2 fa-lg fa-solid fa-plus" style="cursor:pointer;" onclick="ManInfFundamentado_AddEdit.fnBuscarPersona('PROFESIONAL', 'N');" data-toggle="tooltip" data-placement="top" title="Nuevo"></i>
                                                                             <strong>
                                                                                 Profesionales responsables
@@ -269,7 +269,7 @@
                                     <div class="card">
                                         <div class="card-header" id="headingTwo">
                                             <a href="#" class="card-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                                Oficio
+                                                Emitir Oficio
                                             </a>
                                         </div>
                                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -284,17 +284,17 @@
                                                     </div>
                                                     <div class="form-group col-md-4">
                                                         <label for="txtNumeroOficio2" class="text-small obligatorio">N° de oficio</label>
-                                                        @Html.TextBoxFor(m => m.txtNumeroOficio2, new { @class = "form-control form-control-sm" })
+                                                        @Html.TextBoxFor(m => m.txtNumeroOficio2, new { @class = "form-control form-control-sm activarEmitirOficio" })
                                                     </div>
                                                     <div class="form-group col-md-4">
                                                         <label for="dtpfechaOficio2" class="text-small obligatorio">Fecha de Oficio</label>
-                                                        @Html.EditorFor(m => m.dtpfechaOficio2, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
+                                                        @Html.EditorFor(m => m.dtpfechaOficio2, new { htmlAttributes = new { @class = "form-control form-control-sm activarEmitirOficio", placeholder = "dd/mm/yyyy" } })
                                                     </div>
                                                 </div>
                                                 <div class="form-row">
                                                     <div class="form-group col-md-12">
                                                         <label for="txtObservacionesOficio" class="text-small">Observaciones</label>
-                                                        @Html.TextAreaFor(m => m.txtObservacionesOficio, 3, 1, new { @class = "form-control form-control-sm" })
+                                                        @Html.TextAreaFor(m => m.txtObservacionesOficio, 3, 1, new { @class = "form-control form-control-sm activarEmitirOficio" })
                                                     </div>
                                                 </div>
                                             </div>
@@ -318,14 +318,13 @@
                                         <div class="form-group col-md-4">
                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                 <label for="txtNumeroOficioPau" class="text-small obligatorio"> N° de Oficio</label>
-                                                @Html.EditorFor(m => m.txtNumeroOficioPau, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                                @Html.EditorFor(m => m.txtNumeroOficioPau, new { htmlAttributes = new { @class = "form-control form-control-sm activarEmitirOficioPau" } })
                                             </div>
                                         </div>
                                         <div class="form-group col-md-4">
 
                                             <label for="dtpFechaEmisionPau" class="text-small obligatorio">Fecha de Emisión</label>
-                                            @Html.EditorFor(m => m.dtpFechaEmisionPau, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
-                                            @*@Html.EditorFor(m => m.dtpfechaOficio2, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })*@
+                                            @Html.EditorFor(m => m.dtpFechaEmisionPau, new { htmlAttributes = new { @class = "form-control form-control-sm activarEmitirOficioPau", placeholder = "dd/mm/yyyy" } })
                                         </div>
                                     </div>
                                     <br />
@@ -342,7 +341,7 @@
 
                                         <div class="form-group col-md-12">
                                             <label for="txtObservacionesPau" class="text-small">Observaciones</label>
-                                            @Html.TextAreaFor(m => m.txtObservacionesPau, 3, 1, new { @class = "form-control form-control-sm" })
+                                            @Html.TextAreaFor(m => m.txtObservacionesPau, 3, 1, new { @class = "form-control form-control-sm activarEmitirOficioPau" })
                                         </div>
                                     </div>
                                 </div>
@@ -362,7 +361,7 @@
                                         <div class="form-group col-md-4">
                                             <div class="custom-control custom-checkbox my-1 mr-sm-2">
                                                 <label for="dtpFechaNotificacion" class="text-small"> Fecha de Notificación</label>
-                                                @Html.EditorFor(m => m.dtpFechaNotificacion, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = "dd/mm/yyyy" } })
+                                                @Html.EditorFor(m => m.dtpFechaNotificacion, new { htmlAttributes = new { @class = "form-control form-control-sm activarNotificacion", placeholder = "dd/mm/yyyy" } })
                                             </div>
                                         </div>
                                         <div class="form-group col-md-4">
@@ -373,7 +372,7 @@
                                         <div class="form-group col-md-12">
 
                                             <label for="txtAnotaciones" class="text-small">Anotaciones</label>
-                                            @Html.TextAreaFor(m => m.txtAnotaciones, 3, 1, new { @class = "form-control form-control-sm" })
+                                            @Html.TextAreaFor(m => m.txtAnotaciones, 3, 1, new { @class = "form-control form-control-sm activarNotificacion" })
                                         </div>
                                     </div>
                                 </div>
