--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_29.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManPAURD/templates/Concesiones/infracciones/inciso_29.cshtml
@@ -14,8 +14,8 @@
                 Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 1 del Anexo 1 del RISMFFS.<br /><br />
-                <i>“No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”</i>
+                Numeral 29 del Anexo 1 del RISMFFS.<br /><br />
+                <i>“Talar, extraer y/o aprovechar recursos forestales sin autorización en su condición o no de titular del título habilitante, a excepción de los aprovechados por subsistencia”</i>
             </td>
             <td style="border: 1px solid #000;">
                 ${infraccion.detalle || 'XX'}
@@ -36,9 +36,9 @@
     Al respecto, el/la administrada (o) presentó sus descargos contra la Resolución Sub Directoral mediante la Carta N° xxxxxxxxxx de fecha xx de xxxxx de 2023, ingresado con fecha xx de xxxx de 2023 (Registro N° xxxxxxxx) del cual se advierte los siguientes argumentos que guardan relación con la imputación materia de análisis:
 </p>
 <ol style="list-style-type: lower-alpha">
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
-    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>    
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+    <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
 <p class="enumeration">
     En ese sentido, la Autoridad Instructora realizó el análisis correspondiente al Expediente Administrativo, así como de los documentos mencionados precedentemente, concluyendo lo siguiente:
@@ -49,41 +49,48 @@
     </li>
 </ul>
 <p class="enumeration">
-    Mediante Escrito S/N de fecha XX de XX de 20XX con Registro XX, el/la administrado presentó sus descargos al informe final de instrucción, donde se advierte los siguientes argumentos:
+    Al respecto, mediante escrito N° xxx con SITD N° xxxxxxx de fecha xx de xxxx de xxxx, el/la administrado (a) presentó su descargo al Informe Final de Instrucción, señalando lo siguiente:
 </p>
 <ol style="list-style-type: lower-alpha">
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
     <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
 </ol>
-<p class="enumeration">Respecto a lo señalado por el titular, se advierte el siguiente análisis:</p>
+<p class="enumeration">Respecto a lo señalado por el/la administrado (a); se advierte el siguiente análisis:</p>
 <ul>
     <li>Con relación al argumento señalado en el acápite a) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite b) xxxxxxxxxxxxxxxxxxx</li>
     <li>Con relación al argumento señalado en el acápite c) xxxxxxxxxxxxxxxxxxx</li>
 </ul>
 <p class="enumeration">
-    Al respecto, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
+    En esta etapa del procedimiento, de acuerdo a la documentación que obra en el expediente administrativo y del análisis de los descargos, se advierte lo siguiente:
 </p>
 <ul>
     <li>
-        Conforme al contenido Informe de Supervisión, su numeral xxx, cuadro N° xx, se advierte que, el/la administrado (a) no ha cumplido con la señalización de los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03), igualmente, con el linderamiento de las Parcelas de Corta”, afirmación que guarda concordancia con la siguiente imagen fotográfica tomada durante la supervisión:
+        Con fecha xxx, el/la administrado (a) y el Ing. XX suscribieron el Contrato de Regencia Forestal, el cual solo considera los servicios del Regente Forestal para la elaboración del PMFI, tal como se observa a continuación:
     </li>
 </ul>
-<p style="text-align: center;"><strong>Adjuntar imagen</strong></p>
+<p style="text-align: center;">
+    <strong>
+        Consignar Imagen<br />
+        Fuente: Contrato de Regencia de fecha …
+    </strong>
+</p>
 <ul>
     <li>
-        Ahora bien, la mencionada obligación no solo se encuentra establecida en el literal xx del numeral <strong>xxxx del artículo xxx del RGF y/o RGFFSCNCC</strong>, además se encuentra establecida en el numeral xx del <strong>PO/PMF</strong>, donde se señala que, en el área de producción maderable se realizará entre otras actividades, la señalización de vértices y el linderamiento del área a manejar, lo cual incluiría las PC 01, 02 y 03.
+        El PM aprobado mediante la Resolución XX, tiene vigencia hasta XX. Asimismo, de la revisión de la Forma 20, se advierte que la última movilización se realizó el 2XX, conforme se aprecia del siguiente gráfico:
     </li>
+</ul>
+<p style="text-align: center;">
+    <strong>Gráfico 01.</strong> Línea de tiempo    
+</p>
+<ul>
     <li>
-        En efecto, el/la administrado (a) no ha cumplido con establecer linderos, hitos u otras señales en los vértices V2 (PC 01), V4 (PC 02) y V3 (PC 03); tampoco ha realizado el linderamiento de las Parcelas de Corta xx.
-    </li>
-    <li>
-        El RISMFFS permite que la infracción analizada se subsane, incluso hasta el vencimiento del plazo previsto para la presentación de los descargos en la fase instructora; siendo que, el/la administrado (a) no cumplió con establecer linderos u otras señales.
+        En efecto, el/la administrado (a) implementó el Plan de Manejo Forestal xxx, sin embargo, no contó con regente forestal entre las fechas xx de xxx de xx al xx de xxx de xxx, fechas en las que efectúo aprovechamiento forestal.
     </li>
 </ul>
 {{/if}}
 
 <p class="enumeration">
-    En ese contexto, de acuerdo a lo señalado precedentemente, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 1 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
+    En ese contexto, se confirma que el/la administrado (a) cometió la infracción tipificada en el numeral 29 del Anexo 1 del RISMFFS; criterio acorde a lo señalado en el Informe Final de Instrucción.
 </p>
